<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTxtWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/EditTxtWord_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btnReverse_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtWord"
        android:onClick="reverseWord"/>

    <TextView
        android:id="@+id/txtVwSavedWordsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/txtVwSavedWordsText_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtVwSavedWordsAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVwSavedWordsAmount"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:text="@string/txtVwSavedWordsAmount_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:text="@string/btnSave_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReverse"
        android:onClick="saveWord"/>

    <TextView
        android:id="@+id/txtVwResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtVwResult_Text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnReverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtWord" />
</androidx.constraintlayout.widget.ConstraintLayout>